<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_signup"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/deep_sky_blue"
    tools:context=".presentation.ui.SignupActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingHorizontal="@dimen/margin_default">

            <TextView
                android:id="@+id/ivCreateAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:layout_marginTop="46dp"
                android:layout_marginEnd="200dp"
                android:fontFamily="@font/poppins"
                android:text="@string/create_account"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/guideline3"/>

            <TextView
                android:id="@+id/letsKnowYou"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:layout_marginTop="9dp"
                android:layout_marginEnd="200dp"
                android:fontFamily="@font/poppins"
                android:text="@string/lets_know_you"
                android:textAlignment="viewStart"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ivCreateAccount"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/firstNameLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_default"
                app:boxBackgroundColor="@color/deep_sky_blue"
                android:layout_marginTop="43dp"
                android:hint="@string/first_name"
                android:textColorHint="@color/hex_grey"
                app:hintTextColor="@color/hex_grey"
                app:errorEnabled="true"
                app:backgroundTint="@color/hex_grey"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/letsKnowYou">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/firstName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="@dimen/margin_default_small"
                    android:fontFamily="@font/roboto"
                    android:inputType="text"
                    android:padding="@dimen/margin_default_small"
                    android:textColor="@color/hex_grey"
                    android:textColorHighlight="@color/white"
                    android:textColorHint="@color/white"
                    android:textColorLink="@color/light_sky_blue" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/lastNameLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_default"
                app:boxBackgroundColor="@color/deep_sky_blue"
                android:hint="@string/last_name"
                android:textColorHint="@color/white"
                app:errorEnabled="true"
                app:helperTextEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/firstNameLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/lastName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="@dimen/margin_default_small"
                    android:inputType="text"
                    android:padding="@dimen/margin_default_small"
                    android:textColor="@color/hex_grey"
                    android:textColorHighlight="@color/white"
                    android:textColorHint="@color/white"
                    android:textColorLink="@color/white" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/OtherName"
                app:boxBackgroundColor="@color/deep_sky_blue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_default"
                android:hint="@string/other_name"
                android:textColorHint="@color/hex_grey"
                app:errorEnabled="true"
                app:helperTextEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/lastNameLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/OtherNameText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="@dimen/margin_default_small"
                    android:fontFamily="@font/roboto"
                    android:inputType="text"
                    android:padding="@dimen/margin_default_small"
                    android:textColor="@color/white"
                    android:textColorHighlight="@color/white"
                    android:textColorHint="@color/white"
                    android:textColorLink="@color/white" />

            </com.google.android.material.textfield.TextInputLayout>


            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/spinner"
                style="@style/Widget.AppCompat.Spinner.Underlined"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_default"
                android:dropDownWidth="wrap_content"
                android:entries="@array/Account"
                android:minHeight="48dp"
                android:spinnerMode="dropdown"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/OtherName" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailAddressLayout"
                app:boxBackgroundColor="@color/deep_sky_blue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_default"
                android:hint="@string/email_address"
                android:textColorHint="@color/hex_grey"
                app:errorEnabled="true"
                app:helperTextEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/spinner">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/emailAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="@dimen/margin_default_small"
                    android:inputType="textEmailAddress"
                    android:padding="@dimen/margin_default_small"
                    android:textColor="@color/hex_grey"
                    android:textColorHighlight="@color/white"
                    android:textColorHint="@color/white"
                    android:textColorLink="@color/white" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/PasswordLayout"
                app:boxBackgroundColor="@color/deep_sky_blue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_default"
                android:hint="@string/password"
                android:textColorHint="@color/hex_grey"
                app:errorEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/emailAddressLayout"
                app:passwordToggleDrawable="@drawable/ic_visibility"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="@dimen/margin_default_small"
                    android:inputType="text"
                    android:padding="@dimen/margin_default_small"
                    android:textColor="@color/hex_grey"
                    android:textColorHighlight="@color/white"
                    android:textColorHint="@color/white"
                    android:textColorLink="@color/white" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ConfirmPasswordLayout"
                app:boxBackgroundColor="@color/deep_sky_blue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_default"
                android:hint="@string/confirm_password"
                android:textColorHint="@color/white"
                app:errorEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/PasswordLayout"
                app:passwordToggleDrawable="@drawable/ic_visibility"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/confirm_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="@dimen/margin_default_small"
                    android:inputType="text"
                    android:padding="@dimen/margin_default_small"
                    android:textColor="@color/hex_grey"
                    android:textColorHighlight="@color/white"
                    android:textColorHint="@color/white"
                    android:textColorLink="@color/white" />

            </com.google.android.material.textfield.TextInputLayout>


            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.0" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btSignup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="45dp"
                android:backgroundTint="@color/white"
                android:fontFamily="@font/poppins"
                android:text="@string/sign_up"
                android:textColor="@color/deep_sky_blue"
                android:visibility="visible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ConfirmPasswordLayout"
                tools:visibility="visible" />

            <TextView
                android:id="@+id/haveAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="21dp"
                android:fontFamily="@font/poppins"
                android:paddingBottom="40dp"
                android:text="@string/have_an_account"
                android:textColor="@color/hex_grey"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btSignup" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins"
                android:paddingBottom="40dp"
                android:text="@string/login"
                android:textColor="@color/hex_grey"
                android:textStyle="bold"
                android:layout_marginStart="@dimen/size_8_dp"
                app:layout_constraintTop_toTopOf="@id/haveAccount"
                app:layout_constraintBottom_toBottomOf="@id/haveAccount"
                app:layout_constraintStart_toEndOf="@id/haveAccount" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>